fix: retrait de sudo pour la copie

--- a/.github/workflows/runner_dep.yaml
+++ b/.github/workflows/runner_dep.yaml
@@ -20,4 +20,4 @@ jobs:
 
       - name: Déploiement vers Nginx
         run: |
-          sudo cp -r * /var/www/html/
+          cp -r * /var/www/html/
